# Optkit

./: .gitignore  Makefile  Makefile.am  README  README.md  bpt.dbg  config.h  config.h.in  configure  configure.ac  meson.build  test.c
.libs/: test
lib/: meson.build  optkit.h  optkit_base.c  optkit_base.h  optkit_cs_help.c  optkit_macro.h
lib/.libs/: liboptkit.la  liboptkit.lai  liboptkit.so.0  liboptkit.so.0.0.0
lib/bits/types/: optkit_cs_help.h  optkit_t.h
src/: Makefile.am  optkit.c  optkit.h  optkit_macro.h  test.c
src/.deps/: optkit.Po  test.Po
src/bits/types/: optkit_t.h
